# anipics

./: .gitignore  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py
anipics/: __init__.py  models.py  parser.py
anipics/services/: __init__.py  animepicsx.py  anipics.py  nekoslife.py  purrbot.py  waifupics.py
examples/: async.py  sync.py
tests/: test_async.py  test_sync.py
